# sear

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
.cargo/: audit.toml
.github/workflows/: rust.yml  security_audit.yml
protos/: README.md  entry.proto  footer.proto  footers.proto  header.proto  metadata.proto  timestamp.proto
src/: builder.rs  crypto.rs  entry.rs  error.rs  keyring.rs  lib.rs  prelude.rs  protos.rs  uuid.rs
src/crypto/: kdf.rs  stream.rs  symmetric.rs
src/crypto/stream/: encryptor.rs  writer.rs
src/entry/: attributes.rs  owner.rs  permissions.rs
src/keyring/: key.rs  mod.rs  symmetric.rs
src/protos/: entry.rs  footer.rs  footers.rs  header.rs  metadata.rs  mod.rs  timestamp.rs
tests/: acceptance.rs  cli.rs
tests/fixtures/keys/: encryption.key
