[package]
name        = "sear"
description = "Signed/Encrypted ARchive: an encrypted archive format with tar-like CLI tool"
version     = "0.0.0"
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
categories  = ["command-line-interface", "cryptography", "parser-implementations"]
keywords    = ["archive", "encryption", "security"]
edition     = "2018"

[dependencies]
abscissa_core = { version = "0.5", optional = true }
bytes = "0.5"
chrono = "0.4"
cryptouri = "0.2"
gumdrop = { version = "0.7", optional = true }
hkdf = "0.8"
lazy_static = { version = "1", optional = true }
prost = "0.6"
serde = { version = "1", features = ["serde_derive"], optional = true }
sha2 = "0.8"
tai64 = { version = "3", features = ["chrono"] }
thiserror = "1"
toml = { version  = "0.5", optional = true }
uuid = { version = "0.8", default-features = false }
zeroize = "1"

[build-dependencies]
prost-build = "0.5"

[dev-dependencies]
tempfile = "3"

[features]
cli = ["abscissa_core", "gumdrop", "serde", "toml"]
default = ["cli", "std"]
std = []
