[package]
name        = "sear"
description = "Signed/Encrypted ARchive: an encrypted archive format with tar-like CLI tool"
version     = "0.0.0"
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
categories  = ["command-line-interface", "cryptography", "parser-implementations"]
keywords    = ["archive", "encryption", "security"]
edition     = "2018"

[dependencies]
abscissa_core = { version = "0.5.2", optional = true }
aead = "0.3"
aes-gcm = "0.8"
anomaly = "0.2"
bytes = "0.5"
chacha20poly1305 = "0.7"
chrono = "0.4"
cryptouri = "0.4"
gumdrop = { version = "0.7", optional = true }
getrandom = "0.2"
hkdf = "0.10.0"
mime = "0.3"
prost = "0.6"
serde = { version = "1", features = ["serde_derive"], optional = true }
sha2 = "0.9"
tai64 = { version = "3", features = ["chrono"] }
thiserror = "1"
tree_magic = "0.2"
uuid = { version = "0.8", default-features = false }
zeroize = "1"

[build-dependencies]
prost-build = "0.7"

[dev-dependencies]
once_cell = "1"
tempfile = "3"

[features]
default = ["cli"]
cli = ["abscissa_core", "gumdrop", "serde"]
